# clotnet

./: .gitignore  main.py  pyproject.toml
api/v1/: router.py
api/v1/endpoints/: invoice.py
core/: config.py  database.py  dependencies.py
models/: client.py  company.py  invoice.py
repositories/: mongodb.py
schemas/: client.py  company.py  invoice.py
services/: invoice_service.py  pdf_generator.py
